Corregido lenguaje :es

--- a/src/alfred/config/locales/es.yml
+++ b/src/alfred/config/locales/es.yml
@@ -19,11 +19,12 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
-  people_new_name: "Name"
-  people_new_email: "Email"
-  people_new_celphone: "Celphone"
-  people_new_telephone: "Telephone"
-  people_new_birth_date: "Birth date"
-  people_new_init_date: "Init date"
-  people_new_submit: "Create user"
+es:
+  people_new_name: "Nombre"
+  people_new_email: "Correo electrónico"
+  people_new_celphone: "Celular"
+  people_new_telephone: "Teléfono"
+  people_new_birth_date: "Fecha de nacimiento"
+  people_new_init_date: "Fecha de ingreso"
+  people_new_submit: "Crear usuario"
+
