Pull request corregido, falta Sacar la carpeta .idea, y el archivo database.yml

--- a/src/alfred/config/locales/en.yml
+++ b/src/alfred/config/locales/en.yml
@@ -1,7 +1,7 @@
 en:
   people_new_name: "Name"
   people_new_email: "Email"
-  people_new_celphone: "Celphone"
+  people_new_celphone: "Cellphone"
   people_new_telephone: "Telephone"
   people_new_birth_date: "Birth date"
   people_new_init_date: "Init date"
