--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 es:
+  #crear persona
   people_new_name: "Nombre"
   people_new_email: "Correo electrónico"
   people_new_celphone: "Celular"
@@ -27,6 +28,16 @@ es:
   people_new_birth_date: "Fecha de nacimiento"
   people_new_init_date: "Fecha de ingreso"
   people_new_submit: "Crear usuario"
+  #hitos
+  pending: pendinte
+  done: hecho
+  rejected: rechazado
+  feedback: 'feedback'
+  event: evento
+
+  markdone: 'marcar como hecho'
+
+  #fechas
   date:
     abbr_day_names:
     - dom
