Locale incorporado a enum status

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,3 +14,8 @@ en:
   project_new_end_date: "End date"
   project_new_technologies: "Technologies"
   project_new_submit: "Create project"
+  project:
+    display_status:
+      active: 'Active'
+      inactive: 'Inactive'
+      finished: 'Finished'
