--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,3 +11,6 @@ en:
   markdone: 'Mark as done'
   attachmentsdocs: 'Attachments documents'
   adddoc: 'Add document'
+  driveerrormsj: 'An error has occurred. Be sure to follow the following points:
+                    - You have entered a correct URL
+                    - You have access permissions to the file in Google Drive'
