--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -38,6 +38,9 @@ es:
   markdone: 'Marcar como hecho'
   attachmentsdocs: 'Documentos adjuntos'
   adddoc: 'Agregar documento'
+  driveerrormsj: 'Ha ocurrido un error. Asegúrese de cumplir con los siguientes puntos:
+                    - Ha ingresado un URL correcta
+                    - Tiene permisos de acceso al archivo en Google Drive'
 
   #fechas
   date:
