Implementado show project --skip-ci

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,12 +8,12 @@ en:
   people_new_init_date: "Init date"
   people_new_submit: "Create user"
 
-  project_new_name: "Name"
-  project_new_client: "Client"
-  project_new_status: "Status"
-  project_new_start_date: "Start date"
-  project_new_end_date: "End date"
-  project_new_technologies: "Technologies"
+  project_name: "Name"
+  project_client: "Client"
+  project_status: "Status"
+  project_start_date: "Start date"
+  project_end_date: "End date"
+  project_technologies: "Technologies"
   project_new_submit: "Create project"
   project:
     display_status:
