--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -23,6 +23,7 @@ es:
 
   edit: "Editar"
   delete: "Borrar"
+  back: "Volver"
 
   #crear persona
   people_new_name: "Nombre"
@@ -36,7 +37,7 @@ es:
   mentor_since: "Desde"
   mentor_name: "Nombre del mentor"
   mentor_submit: "Agregar mentor"
-
+  mentor_nomore_msg: "No hay más mentores disponibles para agregar para"
 
   project_id: "ID"
   project_name: "Nombre"
