--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -39,6 +39,8 @@ es:
   mentor_submit: "Agregar mentor"
   mentor_nomore_msg: "No hay más mentores disponibles para agregar para"
 
+  project_create_head: "Crear Proyecto"
+  project_edit_head: "Editar Proyecto"
   project_id: "ID"
   project_name: "Nombre"
   project_client: "Cliente"
