--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -24,6 +24,7 @@ es:
   edit: "Editar"
   delete: "Borrar"
   back: "Volver"
+  title: "Título"
 
   #crear persona
   people_new_name: "Nombre"
@@ -64,8 +65,12 @@ es:
   rejected: Rechazado
   feedback: 'Feedback'
   event: Evento
+  milestone_edit_head: "Editar Hito"
+  milestone_due_date: "Due date del hito"
+  milestone_reviewer: 'Revisor del feedback'
 
   markdone: 'Marcar como hecho'
+  add_feedback_author: 'Añadir revisor del feedback'
   attachmentsdocs: 'Documentos adjuntos'
   adddoc: 'Agregar documento'
   driveerrormsj: 'Ha ocurrido un error. Asegúrese de cumplir con los siguientes puntos:
