--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,8 @@ en:
   people_new_init_date: "Init date"
   people_new_submit: "Create user"
 
+  people_assign_to: "People assign to"
+
   mentor_since: "Since"
   mentor_name: "Mentor's name"
   mentor_submit: "Add mentor"
