Asignar people en New y Edit, faltar obligar a elegir al menos 1

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,6 +69,7 @@ en:
   markdone: 'Mark as done'
   add_feedback_author: 'Add feedback reviewer'
   select_tags: 'Select tags...'
+  assign_to: 'Assign to'
 
   #hitos
   markdone: "mark as done"
