cambie permisos, people/show y milestone/new para todos

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,8 +22,9 @@ en:
   title: 'Title'
   name: 'Name'
   id: 'ID'
-
   not_authorized: "You are not authorized to perform that action"
+  unregistered: "Unregistered user, contact an administrator."
+
 
   #crear persona
   people_new_name: "Name"
