--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -55,7 +55,7 @@ es:
   people_new_init_date: "Fecha de ingreso"
   people_new_submit: "Crear usuario"
   select_people: "Seleccione personas..."
-
+  assign_to_project: "Asignar a proyecto"
 
   mentor_since: "Desde"
   mentor_name: "Nombre del mentor"
@@ -79,8 +79,7 @@ es:
   project_people: "Personas asociadas al proyecto"
   project_no_people: "No hay personas asociadas al proyecto"
   select_technologies: 'Seleccione tecnologías...'
-  project_assign_to: "Asignar persona al proyecto"
-  project_assign_submit: "Asignar"
+  project_assign_submit: 'Asignar a proyecto'
   project:
       display_status:
         active: 'Activo'
