--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -33,7 +33,6 @@ es:
   proyect: "Proyecto"
   proyects: "Proyectos"
   save: "Guardar"
-  sure?: "¿Estas seguro?"
   add: "Agregar"
   values: "Valores"
   create: "Crear"
@@ -96,7 +95,7 @@ es:
   milestone_reviewer: 'Revisor del feedback'
 
   assign_to: 'Asignar a'
-
+  mil_sure?: "¿Esta seguro que desea borrar este hito?"
   markdone: 'Marcar como hecho'
   add_feedback_author: 'Añadir revisor del feedback'
   select_tags: 'Seleccione tags...'
@@ -140,7 +139,7 @@ es:
   me: "Privado"
   mentors: "Mentores"
   every_body: "Publico"
-
+  note_sure?: "¿Esta seguro que desea borrar esta nota?"
 
   attachmentsdocs: 'Documentos adjuntos'
   adddoc: 'Agregar documento'
