alfred-103 edit corregido. new con select corregido y javascritp --skip-ci

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -103,8 +103,8 @@ es:
   markdone: "marcar como hecho"
   mil_title: "Titulo"
   mil_start_date: "Fecha de inicio"
-  mil_due_date: "Fecha limite"
-  mil_description: "Descripcion"
+  mil_due_date: "Fecha límite"
+  mil_description: "Descripción"
   mil_icon: "Icono"
   mil_status: "Estado"
   mil_create: "Crear Hito"
