--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -92,6 +92,7 @@ en:
   mil_delete: "Delete Milestone"
   mil_assigned: " will be assigned by default"
   mil_assigned_to: "Assigned to this milestone"
+  mil_cannot_assign: "You cannot assign more people"
 
   markdone: 'Mark as done'
   attachmentsdocs: 'Attachments documents'
