--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -82,6 +82,7 @@ es:
   project_no_people: "No hay personas asociadas al proyecto"
   select_technologies: 'Seleccione tecnologías...'
   project_assign_submit: 'Asignar a proyecto'
+  project_delete_sure: "¿Estás seguro de que deseas eliminar el proyecto?"
   project:
       display_status:
         active: 'Activo'
