--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -44,6 +44,7 @@ es:
   id: 'ID'
   not_authorized: "No esta autorizado para realizar esa accion"
   unregistered: "Usuario no registrado, contacte a un administrador."
+  invalidurl: 'Url inválida'
 
   #crear persona
   people_new_name: "Nombre"
