cambios url y alertas

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -161,7 +161,8 @@ es:
     feedback: "feedback"
     event: "evento"
     done_or_rejected: 'hitos en estado hecho o rechazado'
-
+    mark_done_sure: '¿Desea marcar como Hecho?'
+    mark_rejected_sure: "¿Desea marcar como Rechazado? \nNota: Si el hito esta Rechazado volverá a Pendiente"
     pendings: "Hitos pendientes"
 
     start_date: "Fecha de inicio"
