--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,7 +140,8 @@ en:
     feedback: "feedback"
     event: "event"
     done_or_rejected: 'milestones in state done or rejected'
-
+    mark_done_sure: 'Mark as Done?'
+    mark_rejected_sure: "Mark as Rejected? \nNote: If it's already Rejected, it will go back to pending"
     pendings: "Pending Milestones"
 
     start_date: "Start date"
