Implementacion inicial de alfred-122

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -203,7 +203,7 @@ en:
     created: "Created at"
     updated: "Updated at"
     create: "Create Note"
-    add: "Add Notes"
+    add: "Add Note"
     me: "Private"
     mentors: "Mentors"
     every_body: "Public"
