--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -224,7 +224,7 @@ es:
     created: "Creado"
     updated: "Actualizado"
     create: "Crear Nota"
-    add: "Agregar Notas"
+    add: "Agregar Nota"
     me: "Privado"
     mentors: "Mentores"
     every_body: "Publico"
