--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -207,6 +207,7 @@ en:
     me: "Private"
     mentors: "Mentors"
     every_body: "Public"
+    more: " more notes"
 
     delete:
       title: "Delete Note"
