--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -147,6 +147,7 @@ en:
     mark_done_sure: 'Are you sure you want to mark the milestone as Done/Pending?'
     mark_rejected_sure: 'Are you sure you want to mark the milestone as Rejected/Pending?'
     pendings: "Pending Milestones"
+    overcomes: 'Expired milestones'
 
     start_date: "Start date"
     description: "Description"
