--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -167,8 +167,7 @@ en:
 
     delete:
       title: "Delete Milestone"
-      sure: "Are you sure you want to delete this milestone?"
-
+      sure: "Are you sure you want to permanently delete this milestone?"
 
   #dashboard
   dashboard:
