categorias con mismo nombre

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -194,6 +194,7 @@ en:
     new:
       header: "Create Category"
       sumbit: "Add Category"
+      exists: "A category with that name already exists"
 
     zero: "There are no available Categories"
 
