--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -149,8 +149,7 @@ en:
     state:
       done_or_rejected: 'milestones in state done or rejected'
       pending: 'milestones in state pending'
-    mark_done_sure: 'Are you sure you want to mark the milestone as Done/Pending?'
-    mark_rejected_sure: 'Are you sure you want to mark the milestone as Rejected/Pending?'
+    mark_as_sure: 'Are you sure you want to mark the milestone as '
     pendings: "Pending Milestones"
     overcomes: 'Expired milestones'
 
