--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -261,9 +261,8 @@ en:
 
   attachmentsdocs: 'Attachments documents'
   adddoc: 'Add document'
-  driveerrormsj: 'An error has occurred. Be sure to follow the following points:
-                    - You have entered a correct URL
-                    - You have access permissions to the file in Google Drive'
+  driveerrormsj: 'A error occurred while attaching the document drive'
+  notpermissionsdrive: 'Be sure you have access permissions to the file in Google Drive'
   attachgoogledrivedoc: 'Attach Google Drive Document'
   documenturl: 'Document URL'
   attach: 'Attach'
