--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -290,9 +290,8 @@ es:
 
   attachmentsdocs: 'Documentos adjuntos'
   adddoc: 'Agregar documento'
-  driveerrormsj: 'Ha ocurrido un error. Asegúrese de cumplir con los siguientes puntos:
-                      - Ha ingresado un URL correcta
-                      - Tiene permisos de acceso al archivo en Google Drive'
+  driveerrormsj: 'A ocurrido un erro al adjuntar el documento de drive'
+  notpermissionsdrive: 'Asegúrese de que  tiene permisos de acceso al archivo en Google Drive'
   attachgoogledrivedoc: 'Adjuntar documento de Google Drive'
   documenturl: 'URL del documento'
   attach: 'Adjuntar'
